--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "version": "1.0.0",
   "main": "app-backup.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/app.js"
   },
   "keywords": [],
   "author": "",
